falco/falco-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falco-server-ingress
  namespace: falco
  annotations: {}

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - falco.vibe.lol # change with your preferred hostname
      secretName: falco-server-tls

  rules:
    - host: falco.vibe.lol # change with your preferred hostname
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: falco-falcosidekick-ui
                port:
                  number: 2802
